Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or any other cheat in a game
Added Find text string on memory menu
Added Quicksave screen function
Added setting to disable persistent writes on Z88 Cards
Added CPC Additional ROMS emulation

* Improvements:

Allow save screen to bmp for most machines
Allow hotswap to Pentagon and to Spectrum +3
Allow hotswap from Spectrum 128 to Spectrum +3
Allow to load .SP snapshots of 64kb (like Shadow of Unicorn)
Improve Azimuth warning on External Audio Source Window
Added SDHC cards addressing support
Added Flash Color mode (128 colors)
Allow to not save snapshot when exiting ZEsarUX
Allow to load an additional config file .zesaruxdevrc
Allow to define Left Alt, Left Ctrl, Left Shift or TAB as Joystick Fire action
Allow to change current tape read position on Input Tape Viewer for .tap files
Allow loading a 8kb rom in ZX80 (for example the ZX81 rom, like an upgraded ZX80 to ZX81)
Allow magnify sprites on View Sprites
Added Sphere Meter Type to View Sensors
Improve compilation: settings --enable-memptr --enable-visualmem --enable-cpustats are enabled by default on ./configure
Improved Inves Spectrum+ emulation: alert when a game may crash due to the Inves write-on-interrupt bug
Improved Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)
Improved PCW emulation: add mode 3 (360x256x16), allow videomode changes by i/o port
Improved Sega Master System emulation: allow to swap controls player 1 <-> player 2
Improved ZSF snapshot: save Datagear DMA state
Improved ZX Recreated keyboard support: allow to use it also on menu
Allow saving .Z80 TC2048, TC2068, TS2068 snapshots. Allow loading .Z80 TC2048, TC2068 snapshots

Improved Spectrum Next emulation (the following allows, for example, run Atic Atac version for Next):
- Added Layer modes 6 and 7 (blend modes)