@@ -16,6 +16,7 @@ Agregado menú para buscar cadenas de texto en memoria
 Agregado función de grabado rápido de pantalla
 Agregada opción para desactivar escrituras persistentes en tarjetas de Z88
 Agregada emulación de ROMS adicionales en CPC
+Agregada opción "--simplemenus" para tener un menú principal muy simple
 
 * Mejoras:
 
