@@ -448,3 +448,5 @@ ok caps+sym+m *tecla para apertura menú?
 -Opción por defecto no permitir zoom x diferente de zoom y al redimensionar ventana mediante ratón. Quedarse con valor inferior de zoom
 
 -Conversión de .P a .P81
+
+-Tecla en debug cpu para habilitar todos los breakpoints
