@@ -16,6 +16,7 @@ Added Find text string on memory menu
 Added Quicksave screen function
 Added setting to disable persistent writes on Z88 Cards
 Added CPC Additional ROMS emulation
+Added setting "--simplemenus" to have a very simple main menu
 
 * Improvements:
 
